// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
              Überschrift
            </h1>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
              Überschrift
            </h2>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
              Überschrift
            </h3>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
              Überschrift
            </h4>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
              Überschrift
            </h5>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" role="alert">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" role="status">
        <div class="kol-alert__container">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="kol-alert__icon"></kol-icon>
          <div class="kol-alert__container-content">
            <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
              Überschrift
            </h6>
            <span aria-describedby="heading" class="kol-alert__content">
              <slot></slot>
            </span>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;
